current/api/deployment-queue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-queue
  labels:
    app: api-queue
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: api-queue
  template:
    metadata:
      name: api-queue
      labels:
        app: api-queue
    spec:
      containers:
        - args:
            - artisan
            - queue:work
            - redis
            - --sleep=3
            - --tries=3
          command:
            - php
          image: vatusa/api:6f5a2df
          imagePullPolicy: IfNotPresent
          name: api-queue
          resources:
            limits:
              memory: 50Mi
            requests:
              memory: 25Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
            runAsUser: 0
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          workingDir: /www
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: { }
      terminationGracePeriodSeconds: 30
