current/api/service-queue.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-queue-service
  labels:
    app: api-queue
spec:
  clusterIP: None
  clusterIPs:
    - None
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: default
      port: 42
      protocol: TCP
      targetPort: 42
  selector:
    app: api-queue
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
