current/api/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-test-ingress
  labels:
    app: api
spec:
  ingressClassName: nginx
  rules:
    - host: api-test.vatusa.dev
      http:
        paths:
          - backend:
              service:
                name: api-service
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - api-test.vatusa.dev
      secretName: api-test-vatusa-dev-tls
